# nox

./: README.md  faculty.csv  index.html  package.json  pnpm-lock.yaml  students.csv  tailwind.config.js  vite.config.ts
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  migrations.rs
src/components/: data-table.tsx  titlebar.tsx  windowControls.tsx
src/routes/: *.tsx  __root.tsx  about.tsx  admin.tsx  currentRecords.tsx  index.tsx  settings.tsx
src/routes/admin/: index.tsx  people.tsx  settings.tsx
src/routes/admin/people/: $categoryID.tsx  index.tsx
src/routes/admin/reports/: index.tsx
src/state/: entryRecord.tsx  userRecord.tsx
src/utils/: report.ts  sql.ts  store.ts
