[package]
name = "nox"
version = "0.1.0"
description = "Entry-Management System"
authors = ["Shardul Nalegave <shardul.nalegave.2005@gmail.com>"]
edition = "2021"

[lib]
name = "nox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
chrono = "0.4"
anyhow = "1"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
